--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div id="combination">
 		<u>Combinations:</u>
 	</div>
-	<script src="dictionary.js"></script>
-	<script src="app.js"></script>
+	<script src="js/dictionary.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
