--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="theme-color" content="#000000" />
-	<title>Wordle Guesser</title>
-</head>
-<body>
-	Enter Word:&nbsp;
-	<input id="input"/>
-	<br />
-	<br />
-	Enter Letters:&nbsp;
-	<input id="letters"/> &nbsp; <button onclick="populateAllLetters()">All</button> 
-	<br />
-	<br />
-	Unique? <input id='unique' type='checkbox' />
-	<br />
-	<br />
-	<button onClick="handleSubmit()">Submit</button>
-	<br />
-	<br />
-	<div id="combination">
-		<u>Combinations:</u>
-	</div>
-	<script src="js/dictionary.js"></script>
-	<script src="js/app.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/wordle-guesser/manifest.json"/><title>Wordle Guesser</title><script defer="defer" src="/wordle-guesser/static/js/main.e4c23cac.js"></script><link href="/wordle-guesser/static/css/main.73affb96.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
